--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,5 +19,7 @@ body {
   background-color: #585858; /* Thumb color (blue-600) */
   border-radius: 9999px;    /* Rounded scrollbar */
 }
-
+.scaleerrrrrrrrrrrrrr{
+  background-color: #000000;
+}
 
